--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 10:08+0000\n"
+"POT-Creation-Date: 2023-02-17 15:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -573,11 +573,12 @@ msgstr "Planification, suivi, évaluation et communication"
 msgid "Subtotal for the programme costs"
 msgstr "Sous-total pour les coûts du programme"
 
+#, python-format
 msgid ""
 "Capacity Strengthening Costs ({%(cost)d}%% of UNICEF the cash component)"
 msgstr ""
-"Coûts de renforcement des capacités ({%(cost)d}%% de l'UNICEF la "
-"composante en espèces)"
+"Coûts de renforcement des capacités ({%(cost)d}%% de l'UNICEF la composante "
+"en espèces)"
 
 msgid "Total PD budget cash"
 msgstr "Total du budget PD en espèces"
