--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-10 10:08+0000\n"
+"POT-Creation-Date: 2023-02-17 15:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -583,11 +583,12 @@ msgstr "Planejamento, monitoramento, avaliação e comunicação"
 msgid "Subtotal for the programme costs"
 msgstr "Subtotal dos custos do programa"
 
+#, python-format
 msgid ""
 "Capacity Strengthening Costs ({%(cost)d}%% of UNICEF the cash component)"
 msgstr ""
-"Custos de Fortalecimento da Capacidade ({%(cost)d}%% do UNICEF, o "
-"componente de caixa)"
+"Custos de Fortalecimento da Capacidade ({%(cost)d}%% do UNICEF, o componente "
+"de caixa)"
 
 msgid "Total PD budget cash"
 msgstr "Valor financeiro total do orçamento do PD"
@@ -1592,7 +1593,8 @@ msgstr "Resultado do Country Programme inserido não é válido"
 msgid ""
 "Please adjust activities to not use the quarters to be removed (%(names)s)."
 msgstr ""
-"Ajuste as atividades para não usar os trimestres a serem removidos (%(names)s)."
+"Ajuste as atividades para não usar os trimestres a serem removidos "
+"(%(names)s)."
 
 msgid "Indicator needs to be either cluster or high frequency."
 msgstr "O indicador precisa ser do agrupamento ou de alta frequência."
