Changed duplicated translations for Ended/Terminated statuses on fr and es

--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -916,7 +916,7 @@ msgid "Signed"
 msgstr "Firmado"
 
 msgid "Ended"
-msgstr "Terminado"
+msgstr "Finalizado"
 
 msgid "Suspended"
 msgstr "Suspendido"
