--- a/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-17 15:40+0000\n"
+"POT-Creation-Date: 2023-02-22 08:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -682,29 +682,8 @@ msgstr "Plan de travail détaillé Budget"
 msgid "Supply Contribution (Planned)"
 msgstr "Contribution à l'offre (prévue)"
 
-msgid "You must select a type for this CSO"
-msgstr "Vous devez sélectionner un type pour ce CSO"
-
-msgid ""
-"\"CSO Type\" does not apply to non-CSO organizations, please remove type"
-msgstr ""
-"Le \"Type d'OSC\" ne s'applique pas aux organisations non OSC, veuillez "
-"supprimer le type."
-
 msgid "Name"
 msgstr "Nom"
-
-msgid "Bilateral / Multilateral"
-msgstr "Bilatéral / Multilatéral"
-
-msgid "Civil Society Organization"
-msgstr "Organisation de la société civile"
-
-msgid "Government"
-msgstr "Gouvernement"
-
-msgid "UN Agency"
-msgstr "Agence des Nations Unies"
 
 msgid "High"
 msgstr "Haut"
@@ -720,21 +699,6 @@ msgstr "Faible"
 
 msgid "Not Required"
 msgstr "Non requis"
-
-msgid "International"
-msgstr "International"
-
-msgid "National"
-msgstr "National"
-
-msgid "Community Based Organization"
-msgstr "Organisation à base communautaire"
-
-msgid "Academic Institution"
-msgstr "Institution académique"
-
-msgid "Red Cross/Red Crescent National Societies"
-msgstr "Sociétés nationales de la Croix-Rouge et du Croissant-Rouge"
 
 msgid "Description"
 msgstr "Description"
@@ -927,11 +891,21 @@ msgstr "Suspendu"
 msgid "Terminated"
 msgstr "Terminé"
 
+#, fuzzy
+#| msgid "Partner Authorized Officer"
+msgid "(old)Partner Authorized Officer"
+msgstr "Partenaire Agent autorisé"
+
 msgid "Attached Agreement"
 msgstr "Accord ci-joint"
 
 msgid "Termination document for PCAs"
 msgstr "Document de fin de contrat pour les APC"
+
+#, fuzzy
+#| msgid "Signed by partner"
+msgid "(old)Signed by partner"
+msgstr "Signé par le partenaire"
 
 msgid "Signed by partner"
 msgstr "Signé par le partenaire"
@@ -1013,6 +987,16 @@ msgstr "Date de la révision finale du partenariat"
 
 msgid "Final Review Approved"
 msgstr "Révision finale approuvée"
+
+#, fuzzy
+#| msgid "Signed by Partner"
+msgid "(old)Signed by Partner"
+msgstr "Signé par le partenaire"
+
+#, fuzzy
+#| msgid "CSO Authorized Officials"
+msgid "(old)CSO Authorized Officials"
+msgstr "Fonctionnaires autorisés de l'OSC"
 
 msgid "Contingency PD"
 msgstr "PD pour imprévus"
@@ -1955,3 +1939,12 @@ msgstr "La date d'aujourd'hui n'est pas postérieure à la date de début"
 
 msgid "Meeting date is not available."
 msgstr "La date de la réunion n'est pas disponible."
+
+#~ msgid "You must select a type for this CSO"
+#~ msgstr "Vous devez sélectionner un type pour ce CSO"
+
+#~ msgid ""
+#~ "\"CSO Type\" does not apply to non-CSO organizations, please remove type"
+#~ msgstr ""
+#~ "Le \"Type d'OSC\" ne s'applique pas aux organisations non OSC, veuillez "
+#~ "supprimer le type."
