fixed tests and typos in translations

--- a/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-22 12:54+0000\n"
+"POT-Creation-Date: 2023-02-22 14:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1618,7 +1618,7 @@ msgid "One or more of the FRs selected is related to a different PD/SPD, %s"
 msgstr ""
 
 #, python-format
-msgid "This field is limited to %d or less characters.)"
+msgid "This field is limited to %d or less characters."
 msgstr ""
 
 #, python-format
@@ -1676,7 +1676,7 @@ msgstr ""
 
 #, python-format
 msgid ""
-"The email for the partner contact is used by another partner contact.Email "
+"The email for the partner contact is used by another partner contact. Email "
 "has to be unique to proceed %s"
 msgstr ""
 
